--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,6 @@
 {% extends "navbar.html" %}
+{% block title %}User Signup{% endblock title %}
+
 {% load static %}
 {% block stylesheet %}
 <link href="{% static "css/register.css" %}" rel="stylesheet">
@@ -36,4 +38,6 @@
         
     </a></form></div><a class="link" href="">
 </a></div>
+
+
 {% endblock body %}
