--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,86 +1,54 @@
 <!doctype html>
 <html lang="en">
 <head>
+  
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{% block title %} {% endblock title %}</title>
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
+  {% load static %}
+      <link rel="shortcut icon"  type="image/jpg" href="{% static 'images/lifescribe_logo-removebg.png' %}"/>
+
 
   {% block stylesheet %}
 
   {% endblock stylesheet %}
 </head>
-<body>
+<body style="background-color: antiquewhite;">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-      <a class="navbar-brand fw-bolder" href="/">LifeScribe</a>
+  <nav class="navbar navbar-expand-lg navbar-dark">
+    <div class="container-fluid"> 
+      <a class="navbar-brand fw-bolder" style="color: #DE5499;  text-shadow: 2px 2px rgb(163, 156, 156); font-size: xx-large;" href="/">LifeScribe</a>
       <!-- Toggler button for mobile devices -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" style="background-color: #DE5499;" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           {% if user.is_authenticated %}
-          <li class="nav-item">
-            <a class="nav-link fst-italic" href="/">Welcome, {{user.username}}</a>
-          </li>
+       
           <li class="nav-item me-2">
-            <a class="btn btn-warning" aria-current="page" href="/show-entry">My Diary</a>
+            <a class="btn btn-warning" style="background-color: #DE5499; color: black; font-weight: 500;" aria-current="page" href="/show-entry">My Diary</a>
           </li>
           <li class="nav-item">
-            <a class="btn btn-danger" aria-current="page" href="/logout">Logout</a>
+            <a class="btn btn-danger" style="background-color: #080004; color: white; font-weight: 500;" aria-current="page" href="/logout">Logout</a>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="btn btn-success" aria-current="page" href="/login">Login</a>
+            <a class="btn btn-success" style="background-color: #DE5499; color: black; font-weight: 600;" aria-current="page" href="/login">Login</a>
           </li>
           {% endif %}
         </ul>
       </div>
     </div>
-  </nav>
-  
-  
-
+  </nav>    
   {% block body %} {% endblock body %}
 
-
-  <footer class="bg-light py-4 mt-4 shadow-sm rounded">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-4">
-                <h5>About LifeScribe</h5>
-                <p>LifeScribe helps you capture your daily thoughts and moments. Keep your memories safe and accessible anytime.</p>
-            </div>
-            <div class="col-md-4">
-                <h5>Quick Links</h5>
-                <ul class="list-unstyled">
-                    <li><a href="/" class="text-dark">Home</a></li>
-                    <li><a href="/show-entry" class="text-dark">My Diary</a></li>
-                </ul>
-            </div>
-            <div class="col-md-4">
-                <h5>Developer</h5>
-                <ul class="list-unstyled">
-                    <li><i class="bi bi-code-slash"></i> Developed by Prabuddha Chunchekar</li>
-                    <li><a href="https://www.instagram.com/prabuddhachunchekar/" target="_blank"><i class="bi bi-instagram"></i> instagram </li></a>
-                    <li><a href="https://www.linkedin.com/in/prabuddha-chunchekar-2847881aa/" target="_blank"><i class="bi bi-linkedin"></i> LinkedIn</li></a>
-                    <li><a href="https://prabuddha302005.github.io/responsive-Portfolio/index.html" target="_blank"><i class="bi bi-person-fill"></i>Portfolio</li></a>
-                </ul>
-            </div>
-        </div>
-        <div class="row mt-3">
-            <div class="col text-center">
-                <p class="text-muted">&copy; 2024 LifeScribe. All Rights Reserved.</p>
-            </div>
-        </div>
-    </div>
-</footer>
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.
+</body>
+</html>
